--- a/src/screens/Turist/TuristFive/styles.css
+++ b/src/screens/Turist/TuristFive/styles.css
@@ -45,3 +45,9 @@
         font-size: 2.5em;
     }
 }
+@media (min-width: 992px)  {
+    .titleTuristFive {
+        width: 70%;
+        font-size: 3.5em;
+    }
+}
