--- a/src/components/Card/CardSelect/styles.css
+++ b/src/components/Card/CardSelect/styles.css
@@ -33,7 +33,6 @@
     overflow: hidden;
 }
 .containerTextSelect {
-    width: 50%;
     display: flex;
     flex-direction: column;
 }
@@ -66,7 +65,6 @@
     }
     .containerTextSelect {
         width: 100%;
-        font-size: .9em;
         overflow: scroll;
     }
     .textSelect {
@@ -98,7 +96,10 @@
     .photoContainer {
         height: auto;
     }
+}
+
+@media (min-width: 1200px) {
     .containerTextSelect {
-        justify-content: space-evenly;
+        justify-content: center;
     }
 }
