--- a/src/components/Card/CardTurist/styles.css
+++ b/src/components/Card/CardTurist/styles.css
@@ -1,51 +1,173 @@
 @font-face {
-    font-family: "Poppins";
-    src: url("../../../fonts/Poppins/Poppins-Black.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-ExtraLight.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Light.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
-    src: url("../../../fonts/Poppins/Poppins-SemiBold.ttf");
-    src: url("../../../fonts/Poppins/Poppins-Thin.ttf");
-  }
+  font-family: "Poppins";
+  src: url("../../../fonts/Poppins/Poppins-Black.ttf");
+  src: url("../../../fonts/Poppins/Poppins-Bold.ttf");
+  src: url("../../../fonts/Poppins/Poppins-ExtraBold.ttf");
+  src: url("../../../fonts/Poppins/Poppins-ExtraLight.ttf");
+  src: url("../../../fonts/Poppins/Poppins-Light.ttf");
+  src: url("../../../fonts/Poppins/Poppins-Medium.ttf");
+  src: url("../../../fonts/Poppins/Poppins-Regular.ttf");
+  src: url("../../../fonts/Poppins/Poppins-SemiBold.ttf");
+  src: url("../../../fonts/Poppins/Poppins-Thin.ttf");
+}
 
 .turismCardOne {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
 }
 .orderCardTur {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    gap: .5em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 0.5em;
 }
 .cardTurOne {
-    border-radius: 40px;
-    background: #1E1E1E;
-    width: 250px;
-    height: 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  border-radius: 40px;
+  background: #1e1e1e;
+  width: 250px;
+  height: 340px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+  transition: background 0.3s ease;
+}
+.cardTurOne:hover .imgTuristPix {
+  opacity: 1;
+}
+.imgTuristPix {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.textCardTurOne {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: transform 0.3s ease, color 0.3s ease, text-shadow 0.3s ease;
+  color: #fff;
+  padding: 1em;
+  text-align: center;
+}
+.cardTurOne:hover .textCardTurOne {
+  top: 60%;
+  transform: translateY(0);
+  text-shadow: 0 0 20px rgba(98, 254, 226, 0.8);
 }
 .titleCardTurOne {
-    color: #5A5A5A;
-    text-align: center;
-    font-family: "Poppins-Light", sans-serif;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 70px;
+  color: white;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 1.2em;
+  font-style: normal;
+  font-weight: 400;
+}
+.titleCardTurOne:hover {
+  color: #62fee2;
+}
+
+.containerCardNext {
+  display: flex;
+  gap: 5em;
+  padding: 40px;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 30px;
+  background: rgba(255, 255, 255, 0.1);
+  background-blend-mode: soft-light, normal;
+  box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
+  backdrop-filter: blur(20px);
+}
+.textTurOne,
+.askTitle {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.textCardTur {
+  color: #fff;
+  font-family: "Poppins-Light", sans-serif;
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
+  text-align: start;
+  margin: 0px;
+  width: 70%;
 }
 .askCardTur {
-    color: #62FEE2;
+  color: #62fee2;
+  font-family: "Bebas Neue";
+  font-size: 4em;
+  font-style: normal;
+  margin: 0px;
+  font-weight: 400;
+  line-height: 60px;
+  text-align: start;
+  width: 60%;
+}
+
+@media (min-width: 360px) {
+  .containerCardNext {
+    flex-direction: column;
+    padding: 30px 50px;
+    gap: 1em;
+  }
+  .askCardTur,
+  .textCardTur {
+    width: 100%;
+  }
+  .askCardTur {
+    font-size: 3em;
+    line-height: auto;
+  }
+}
+
+@media (min-width: 992px) {
+  .containerCardNext {
+    flex-direction: row;
+  }
+  .askCardTur {
+    font-size: 4em;
+  }
+}
+
+@media (min-width: 1200px) {
+  .containerCardNext {
+    display: flex;
+    gap: 5em;
+    padding: 40px;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 30px;
+    background: rgba(255, 255, 255, 0.1);
+    background-blend-mode: soft-light, normal;
+    box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
+    backdrop-filter: blur(20px);
+    width: 80%;
+  }
+  .askCardTur {
+    color: #62fee2;
     font-family: "Bebas Neue";
     font-size: 4em;
     font-style: normal;
@@ -54,57 +176,22 @@
     line-height: 60px;
     text-align: start;
     width: 60%;
-}
-.textCardTur {
-    color:#FFF;
+  }
+  .textCardTur {
+    color: #fff;
     font-family: "Poppins-Light", sans-serif;
     font-size: 1em;
     font-style: normal;
     font-weight: 500;
-    line-height: 30px; 
+    line-height: 30px;
     text-align: start;
     margin: 0px;
-    width: 70%;
-}
-.textTurOne, .askTitle {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-.containerCardNext {
-    display: flex;
-    gap: 5em;
-    padding: 40px;
-    flex-direction: row;
-    align-items: center;
-    border-radius: 30px;
-    background:rgba(255, 255, 255, 0.10);
-    background-blend-mode: soft-light, normal;
-    box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
-    backdrop-filter: blur(20px);
-}
-
-@media (min-width: 360px) {
-    .containerCardNext {
-        flex-direction: column;
-        padding: 30px 50px;
-        gap: 1em;
-    }
-    .askCardTur, .textCardTur {
-        width: 100%;
-    }
-    .askCardTur {
-        font-size: 3em;
-        line-height: auto;
-    }
-    
-}
-
-@media (min-width: 992px) {
-    .containerCardNext {
-        flex-direction: row;
-    }
-    .askCardTur {
-        font-size: 4em;
-    }
+    width: 80%;
+  }
+  .orderCardTur {
+    width: 85%;
+  }
+  .containerCardNext {
+    gap: 3em;
+  }
 }
