--- a/src/screens/Turist/TuristTwo/styles.css
+++ b/src/screens/Turist/TuristTwo/styles.css
@@ -71,3 +71,17 @@
     font-size: 1.3em;
 }
 }
+
+@media (min-width: 1200px) {
+  .containerTuristTwo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    width: 100%;
+  }
+  .titleTuristTwo {
+    font-size: 5em;
+  }
+}
