--- a/src/components/Card/CardTurist/styles.css
+++ b/src/components/Card/CardTurist/styles.css
@@ -22,14 +22,16 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   gap: 0.5em;
+  overflow-x: auto; 
+  padding: 1em;
 }
 .cardTurOne {
   border-radius: 40px;
   background: #1e1e1e;
-  width: 250px;
+  width: 250px; 
   height: 340px;
   display: flex;
   align-items: center;
@@ -127,71 +129,70 @@
   width: 60%;
 }
 
-@media (min-width: 360px) {
+@media (min-width: 360px) and (max-width: 772px) {
+  .orderCardTur {
+    flex-direction: row;
+    width: 100%;
+    gap: 0.5em;
+    overflow-x: auto; 
+    padding: 0; 
+  }
+  .cardTurOne {
+    width: 100%; 
+    min-width: 250px; 
+    height: 240px;
+  }
+  .orderCardTur::-webkit-scrollbar {
+    display: none;
+  }
   .containerCardNext {
     flex-direction: column;
-    padding: 30px 50px;
+    padding: 30px;
     gap: 1em;
   }
-  .askCardTur,
+  .askCardTur, .textCardTur {
+    width: 100%;
+  }
+  .imgMove {
+    width: 100px;
+  }
+}
+
+@media (min-width: 773px) and (max-width: 992px) {
+  .orderCardTur {
+    flex-direction: row;
+    width: 100%;
+    gap: 0.5em;
+    overflow-x: auto; 
+    padding: 0; 
+  }
+  .cardTurOne {
+    width: 100%; 
+    min-width: 250px; 
+    height: 240px;
+  }
+  .containerCardNext {
+    flex-direction: row;
+    padding: 30px;
+    gap: 1em;
+  }
+  .askCardTur, .textCardTur {
+    width: 100%;
+  }
+  .imgMove {
+    width: 100px;
+  }
+}
+
+
+@media (min-width: 993px) and (max-width: 1200px) {
   .textCardTur {
     width: 100%;
   }
-  .askCardTur {
-    font-size: 3em;
-    line-height: auto;
-  }
 }
 
-@media (min-width: 992px) {
-  .containerCardNext {
-    flex-direction: row;
-  }
-  .askCardTur {
-    font-size: 4em;
-  }
-}
-
-@media (min-width: 1200px) {
-  .containerCardNext {
-    display: flex;
-    gap: 5em;
-    padding: 40px;
-    flex-direction: row;
-    align-items: center;
-    border-radius: 30px;
-    background: rgba(255, 255, 255, 0.1);
-    background-blend-mode: soft-light, normal;
-    box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
-    backdrop-filter: blur(20px);
-    width: 80%;
-  }
-  .askCardTur {
-    color: #62fee2;
-    font-family: "Bebas Neue";
-    font-size: 4em;
-    font-style: normal;
-    margin: 0px;
-    font-weight: 400;
-    line-height: 60px;
-    text-align: start;
-    width: 60%;
-  }
+@media (min-width: 1201px) {
   .textCardTur {
-    color: #fff;
-    font-family: "Poppins-Light", sans-serif;
-    font-size: 1em;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 30px;
-    text-align: start;
-    margin: 0px;
-    width: 80%;
-  }
-  .orderCardTur {
-    width: 85%;
-  }
-  .containerCardNext {
-    gap: 3em;
+    width: 90%;
   }
 }
