--- a/src/components/Card/CardTurist/styles.css
+++ b/src/components/Card/CardTurist/styles.css
@@ -99,6 +99,7 @@
   background-blend-mode: soft-light, normal;
   box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
   backdrop-filter: blur(20px);
+  height: 170px;
 }
 .textTurOne,
 .askTitle {
@@ -149,6 +150,7 @@
     flex-direction: column;
     padding: 30px;
     gap: 1em;
+    height: auto;
   }
   .askCardTur, .textCardTur {
     width: 100%;
