--- a/src/screens/Turist/TuristFive/styles.css
+++ b/src/screens/Turist/TuristFive/styles.css
@@ -39,22 +39,28 @@
     gap: 2rem;
 }
 
-@media (min-width: 360px) {
+
+@media (min-width: 360px) and (max-width: 576px)  {
     .titleTuristFive {
-        width: 90%;
-        font-size: 2.5em;
-    }
-}
-@media (min-width: 992px)  {
-    .titleTuristFive {
-        width: 70%;
-        font-size: 3.5em;
+        width: 60%;
+        font-size: 1.8em;
+        font-weight: 500;
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 577px) and (max-width: 992px)  {
     .titleTuristFive {
-        width: 50%;
-        font-size: 4em;
+        font-size: 2.4em;
+    }
+}
+@media (min-width: 993px) and (max-width: 1200px) {
+    .titleTuristFive {
+        font-size: 3em;
+    }
+}
+
+@media (min-width: 1201px) {
+    .titleTuristFive {
+        font-size: 4.5em;
     }
 }
