--- a/src/screens/Turist/TuristFour/styles.css
+++ b/src/screens/Turist/TuristFour/styles.css
@@ -14,25 +14,44 @@
     line-height: 100.044%;
     margin: 0px;
 }
-
-@media (min-width: 360px) and (max-width: 576px) {
-        .titleTuristFour {
-          font-size: 3em;
-        }
-        .containerHow {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          width: 100%;
-        }
-        .videoWrapper {
-          display: flex;
-          width: 100%;
-        }
+.containerHow {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  gap: 2em;
+  margin: 20px 0px;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 360px) and (max-width: 576px) {
+    .titleTuristFour {
+      font-size: 2em;;
+    }
+    .containerHow {
+      gap: 2em;
+    }
+    .videoWrapper {
+      display: flex;
+      width: 100%;
+    }
+    .iframe {
+      height: 500px;
+    }
+}
+@media (min-width: 577px) and (max-width: 992px) {
+  .titleTuristFour {
+    font-size: 3em;
+  }
+}
+@media (min-width: 993px) and (max-width: 1200px) {
+  .titleTuristFour {
+    font-size: 3.5em;
+  }
+}
+
+@media (min-width: 1201px) {
   .containerHow {
     display: flex;
     flex-direction: column;
@@ -40,10 +59,11 @@
     justify-content: center;
     width: 100%;
     height: 100vh;
+    gap: 1em;
+    margin: 40px 0px 20px 0px;
   }
   .titleTuristFour {
-    font-size: 4em;
-    margin-bottom: 40px;
+    font-size: 5em;
   }
 
 }
