--- a/src/screens/SectionFour/styles.css
+++ b/src/screens/SectionFour/styles.css
@@ -36,10 +36,11 @@
   box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
   backdrop-filter: blur(20px);
   padding: 40px 50px 80px;
-  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center; 
+  display: flex;
+  align-items: flex-start;
 }
 
 .titleFour {
@@ -127,7 +128,8 @@
     width: 80%;
   }
   .titleFour {
-    font-size: 3em;
+    font-size: 2.4em;
+    width: 60%;
   }
   .moveImage {
     width: 90%;
@@ -173,6 +175,7 @@
   }
   .titleFour {
     font-size: 3em;
+    width: 80%;
   }
   .containerBtnFour {
     display: flex;
