--- a/src/screens/SectionSeven/styles.css
+++ b/src/screens/SectionSeven/styles.css
@@ -18,8 +18,8 @@
     justify-content: flex-start;
     display: flex;
     flex-direction: column;
-    height: auto;
-    width: auto;
+    height: 100vh;
+    width: 100%;
 }
 .containerAsk {
     display: flex;
@@ -54,14 +54,17 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    align-items: flex-start;
+    padding: 20px 0px;
+}
+.questionText {
     color: #FFF;
     font-family: "Poppins", sans-serif;
     font-size: 1.5em;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-    align-items: center;
-    padding: 0px;
+    margin: 0px;
 }
 .icon {
     border-radius: 10px;
@@ -71,13 +74,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
 }
 
-.response {
+.responseText {
     color: white;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-size: 1.2em;
+    text-align: start;
 }
 
 .line {
@@ -96,18 +101,21 @@
         height: 30px;
         border-radius: 5px;
     }
+    .question {
+        align-items: flex-start;
+        padding: 20px 0px;
+    }
     .ask {
         width: 90%;
     }
-    .question p {
-        font-size: .7em;
+    .questionText {
+        font-size: 1em;
         font-weight: 400;
         width: 80%;
         font-family: "Poppins-Regular", sans-serif;
         text-align: start;
-        padding: 10px 0px;
     }
-    .response {
+    .responseText {
         font-size: 1em;
     }
     .containerSecSeven {
@@ -123,7 +131,7 @@
     .ask {
         width: 90%;
     }
-    .question p {
+    .questionText {
         font-size: .7em;
         font-weight: 400;
         width: 80%;
