--- a/src/screens/SectionFour/styles.css
+++ b/src/screens/SectionFour/styles.css
@@ -77,6 +77,9 @@
 }
 .moveImage {
   width: 100%;
+  display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (min-width: 360px) and (max-width: 576px) {
