--- a/src/components/SwipperCard/styles.css
+++ b/src/components/SwipperCard/styles.css
@@ -2,7 +2,7 @@
 .swiper-cards .swiper-slide {
   overflow: visible;
 }
-.imgSwipper {
+.imgSwipper, .imgSwipperTres {
   box-shadow: 0 0 10px rgb(98 254 226 / 25%);
   border-radius: 15px;
 }
