--- a/src/components/SwipperCard/styles.css
+++ b/src/components/SwipperCard/styles.css
@@ -40,3 +40,31 @@
     background-color: rgba(0, 0, 0, 0);
   }
   
+  @media (min-width: 360px) and (max-width: 576px)  {
+    .swiper {
+      width: 300px;
+      height: 400px;
+    }
+  }
+
+  @media (min-width: 577px) and (max-width: 768px) {
+    .swiper {
+      width: 370px;
+      height: 500px;
+    }
+  }
+  @media (min-width: 769px) and (max-width: 992px) {
+    .swiper {
+      width: 450px;
+      height: 500px;
+    }
+  }
+  @media (min-width: 993px) and (max-width: 1400px) {
+    .swiper {
+      width: 400px;
+      height: 500px;
+    }
+    .imgSwipper {
+      width: 100%;
+    }
+  }
