title turist size

--- a/src/components/Card/CardTurist/styles.css
+++ b/src/components/Card/CardTurist/styles.css
@@ -197,4 +197,18 @@
   .textCardTur {
     width: 90%;
   }
+  .orderCardTur {
+    justify-content: center;
+  }
+  .cardTurOne {
+    width: 350px;
+  }
+  .askCardTur {
+    line-height: 75px;
+    font-size: 5em;
+  }
+  .textCardTur {
+    font-size: 1.5em;
+    line-height: 40px;
+  }
 }
