--- a/src/components/HeroText/styles.css
+++ b/src/components/HeroText/styles.css
@@ -30,10 +30,22 @@
   margin: 0px;
   text-shadow: 0px 4px 134px #000;
   width: 80%;
-  font-size: 7em;
+  font-size: 6em;
   font-style: normal;
   font-weight: 400;
 }
+.titleTwo {
+  color: #fff;
+  text-align: center;
+  margin: 0px;
+  text-shadow: 0px 4px 134px #000;
+  width: 80%;
+  font-size: 4em;
+  font-style: normal;
+  font-weight: 400;
+}
+
+
 .subtitleHero {
   color: #fff;
   text-align: center;
@@ -99,18 +111,29 @@
 
 @media (min-width: 769px) {
   .titleHero {
-    font-size: 4em;
+    font-size: 6em;
     width: 80%;
+  }
+  .titleTwo {
+    font-size: 5em;
+    width: 60%;
+    line-height: 100px;
   }
 }
 
-@media (min-width: 993px) {
+@media (min-width: 993px)  {
   .titleHero {
     width: 90%;
-    font-size: 7em;
+
   }
   .subtitleHero {
     font-family: "Poppins-Regular", sans-serif;
     font-size: 1.3em;
+  }
+}
+
+@media (min-width: 1201px) {
+  .titleHero {
+    width: 60%;
   }
 }
