--- a/src/components/buttonFour/styles.css
+++ b/src/components/buttonFour/styles.css
@@ -24,7 +24,8 @@
     background-color: #ffffff5c;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
     width: 100%;
-    height: 50px;
+    /* height: 50px; */
+    height: 60px;
     border-radius: 0px;
     align-items: center;
     justify-content: space-between;
@@ -44,7 +45,7 @@
     color: #FFF;
     text-align: start;
     font-family: "Poppins-Regular", sans-serif;
-    font-size: 1.3em;
+    font-size: 2em;
     font-weight: 400;
     margin: 0px;
 }
@@ -62,8 +63,9 @@
         font-size: 1em;
     }
 }
-@media (min-width: 993px) {
+@media (min-width: 993px) and (max-width: 992px) {
     .buttonFour {
         padding: 10px;
     }
 }
+
