--- a/src/screens/SectionTwo/styles.css
+++ b/src/screens/SectionTwo/styles.css
@@ -77,6 +77,12 @@
   border: 3px solid #62fee2;
 }
 
+.selected { 
+  color: #62fee2; 
+  border: 3px solid #62fee2;
+}
+
+
 
 @keyframes floating-1 {
   0% {
@@ -237,17 +243,7 @@
       transform: translateY(0) rotate(-25deg);
     }
   }
-@keyframes floating-15 {
-    0% {
-      transform: translateY(0) rotate(-15deg);
-    }
-    50% {
-      transform: translateY(-15px) rotate(-15deg);
-    }
-    100% {
-      transform: translateY(0) rotate(-15deg);
-    }
-  }
+
 
 .animation-1 {
   /* control finanzas */
@@ -271,7 +267,7 @@
   /* gratis */
   top: 20%;
   left: 70%;
-  animation: floating-3 5s ease-in-out infinite;
+  animation: floating-4 5s ease-in-out infinite;
 }
 .animation-5 {
   /* multiplataforma */
@@ -336,7 +332,7 @@
 
 
 
-@media (min-width: 360px)  {
+@media (min-width: 360px) and (max-width: 576px)  {
   .titleSectionTwo {
       width: 70%;
       font-size: 2.5em;
@@ -345,60 +341,397 @@
   .containerSectionTwo {
     padding: 0px;
   }
+  .rotated-items-container {
+    width: 100%;
+    height: 500px;
+  }
+  .animation {
+    position: absolute;
+    padding: 15px 15px;
+    width: auto;
+    background-color: #111;
+    background: transparent;
+    border-radius: 100px;
+    border: 2px solid white;
+    cursor: pointer;
+    transition: 300ms ease-in-out;
+    color: #fff;
+    text-align: center;
+    font-family: "Poppins-Regular", sans-serif;
+    font-size: .9em;
+    font-weight: 400;
+  }
+  .animation:hover {
+    color: #62fee2;
+    border: 2px solid #62fee2;
+  }
+  
+  .selected { 
+    color: #62fee2; 
+    border: 2px solid #62fee2;
+  }
+  .animation-1 {
+    top: 25%;
+  }
+  .animation-2 {
+    left: 20%;
+    top: 10%;
+  }
+  .animation-3 {
+    left: 3%;
+    top: 85%;
+  }
+  .animation-4 {
+    left: 80%;
+    top: 40%;
+  }
+  .animation-5 {
+    top: 55%;
+    left: 25%;
+  }
+  .animation-6 {
+    top: 20%;
+    left: 65%;
+  }
+  .animation-7 {
+    left: 5%;
+  }
+  .animation-8 {
+    left: 60%;
+    top: 90%;
+  }
+  .animation-9 {
+    top: 73%;
+    left: 55%;
+  }
+  .animation-10 {
+    top: 1%;
+    left: 60%;
+  }
+  .animation-11 {
+    top: 35%;
+  }
+  .animation-12 {
+    top: 52%;
+    left: 50%;
+  }
+  .animation-13 {
+    left: 1%;
+  }
+  .animation-14 {
+    top: 70%;
+    left: 1%;
+  }
+ 
 }
-@media (max-width: 767px) {
+@media (min-width: 577px) and (max-width: 768px) {
   .titleSectionTwo {
     font-size: 2rem;
     width: 90%;
   }
-
-  .rotated-item {
-    font-size: 0.8rem;
-    padding: 6px 12px;
+  .containerSectionTwo {
+    padding: 0px;
+  }
+  .rotated-items-container {
+    width: 100%;
+    height: 500px;
+  }
+  .animation {
+    position: absolute;
+    padding: 20px 20px;
+    width: auto;
+    background-color: #111;
+    background: transparent;
+    border-radius: 100px;
+    border: 2px solid white;
+    cursor: pointer;
+    transition: 300ms ease-in-out;
+    color: #fff;
+    text-align: center;
+    font-family: "Poppins-Regular", sans-serif;
+    font-size: 1em;
+    font-weight: 400;
+  }
+  .animation:hover {
+    color: #62fee2;
+    border: 2px solid #62fee2;
+  }
+  
+  .selected { 
+    color: #62fee2; 
+    border: 2px solid #62fee2;
+  }
+  .animation-1 {
+    top: 25%;
+  }
+  .animation-2 {
+    left: 40%;
+    top: 10%;
+  }
+  .animation-3 {
+    left: 3%;
+    top: 80%;
+  }
+  .animation-4 {
+    left: 80%;
+    top: 40%;
+  }
+  .animation-5 {
+    top: 60%;
+    left: 35%;
+  }
+  .animation-6 {
+    top: 30%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 5%;
+    top: 10%;
+  }
+  .animation-8 {
+    left: 40%;
+    top: 80%;
+  }
+  .animation-9 {
+    top: 80%;
+    left: 70%;
+  }
+  .animation-10 {
+    top: 10%;
+    left: 70%;
+  }
+  .animation-11 {
+    top: 40%;
+  }
+  .animation-12 {
+    top: 60%;
+    left: 65%;
+  }
+  .animation-13 {
+    left: 1%;
+  }
+  .animation-14 {
+    top: 68%;
+    left: 1%;
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 769px) and (max-width: 992px) {
   .titleSectionTwo {
     font-size: 3rem;
     width: 80%;
   }
-
-  .rotated-item {
-    font-size: 1rem;
-    padding: 8px 16px;
+  .containerSectionTwo {
+    padding: 0px;
+  }
+  .animation {
+    padding: 15px 15px;
+  }
+  .rotated-items-container {
+    width: 100%;
+    height: 500px;
+  }
+  .animation-1 {
+    top: 25%;
+  }
+  .animation-2 {
+    left: 40%;
+    top: 10%;
+  }
+  .animation-3 {
+    left: 15%;
+    top: 75%;
+  }
+  .animation-4 {
+    left: 85%;
+    top: 40%;
+  }
+  .animation-5 {
+    top: 60%;
+    left: 45%;
+  }
+  .animation-6 {
+    top: 30%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 5%;
+    top: 10%;
+  }
+  .animation-8 {
+    left: 45%;
+    top: 80%;
+  }
+  .animation-9 {
+    top: 80%;
+    left: 70%;
+  }
+  .animation-10 {
+    top: 10%;
+    left: 70%;
+  }
+  .animation-11 {
+    top: 40%;
+  }
+  .animation-12 {
+    top: 60%;
+    left: 70%;
+  }
+  .animation-13 {
+    left: 1%;
+  }
+  .animation-14 {
+    top: 68%;
+    left: 1%;
   }
 }
-
-@media (min-width: 992px) {
+@media (min-width: 993px) and (max-width: 1200px)  {
   .titleSectionTwo {
     font-size: 4rem;
     width: 60%;
   }
 
-  .rotated-item {
-    font-size: 1rem;
-    padding: 8px 16px;
+  .containerSectionTwo {
+    padding: 0px;
+  }
+  .animation {
+    padding: 20px 20px;
+  }
+  .rotated-items-container {
+    width: 100%;
+    height: 500px;
+  }
+  .animation-1 {
+    top: 25%;
+    left: 5%;
+  }
+  .animation-2 {
+    left: 40%;
+    top: 10%;
+  }
+  .animation-3 {
+    left: 15%;
+    top: 75%;
+  }
+  .animation-4 {
+    left: 85%;
+    top: 40%;
+  }
+  .animation-5 {
+    top: 55%;
+    left: 45%;
+  }
+  .animation-6 {
+    top: 30%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 5%;
+    top: 10%;
+  }
+  .animation-8 {
+    left: 45%;
+    top: 80%;
+  }
+  .animation-9 {
+    top: 80%;
+    left: 68%;
+  }
+  .animation-10 {
+    top: 10%;
+    left: 70%;
+  }
+  .animation-11 {
+    top: 32%;
+    left: 30%;
+  }
+  .animation-12 {
+    top: 60%;
+    left: 70%;
+  }
+  .animation-13 {
+    left: 20%;
+  }
+  .animation-14 {
+    top: 68%;
+    left: 1%;
+  }
+}
+@media (min-width: 1201px) and (max-width: 1440px)  {
+  .titleSectionTwo {
+    font-size: 4rem;
+    width: 60%;
+  }
+
+  .containerSectionTwo {
+    padding: 0px;
+  }
+  .animation {
+    padding: 20px 20px;
+    font-size: 1.5em;
+  }
+  .rotated-items-container {
+    width: 90%;
+    height: 550px;
+  }
+  .animation-1 {
+    top: 25%;
+    left: 5%;
+  }
+  .animation-2 {
+    left: 40%;
+    top: 10%;
+  }
+  .animation-3 {
+    left: 15%;
+    top: 75%;
+  }
+  .animation-4 {
+    left: 85%;
+    top: 40%;
+  }
+  .animation-5 {
+    top: 55%;
+    left: 45%;
+  }
+  .animation-6 {
+    top: 30%;
+    left: 62%;
+  }
+  .animation-7 {
+    left: 5%;
+    top: 10%;
+  }
+  .animation-8 {
+    left: 45%;
+    top: 80%;
+  }
+  .animation-9 {
+    top: 80%;
+    left: 68%;
+  }
+  .animation-10 {
+    top: 10%;
+    left: 70%;
+  }
+  .animation-11 {
+    top: 32%;
+    left: 30%;
+  }
+  .animation-12 {
+    top: 60%;
+    left: 70%;
+  }
+  .animation-13 {
+    left: 20%;
+  }
+  .animation-14 {
+    top: 68%;
+    left: 1%;
   }
 }
 
-@media (min-width: 577px)  {
-    .titleSectionTwo {
-        width: 80%;
-        font-size: 4em;
-    }
-}
-@media (min-width: 769px){
-    .titleSectionTwo {
-        width: 60%;
-    }
-}
-@media (min-width: 992px) {
-    .titleSectionTwo {
-        font-family: "Poppins", sans-serif;
-        font-size: 5em;
 
-    }
-} 
+
 
 
