--- a/src/components/Card/CardGrag/styles.css
+++ b/src/components/Card/CardGrag/styles.css
@@ -81,6 +81,9 @@
     width: 100%;
     height: 200px;
     overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 
