--- a/src/components/Inputs/styles.css
+++ b/src/components/Inputs/styles.css
@@ -20,6 +20,45 @@
   line-height: normal;
   letter-spacing: 0.16px;
 }
+.containerMessage {
+  border-radius: 30px;
+  width: 200px;
+  height: auto;
+  padding: 30px;
+  background: rgba(255, 255, 255, 0.10);
+  background-blend-mode: soft-light, normal;
+  box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
+  backdrop-filter: blur(20px);
+}
+.arg {
+  position: absolute;
+  right: 130%;
+  top: 0%;
+}
+.motive {
+  position: absolute;
+  right: 130%;
+  top: 40%;
+}
+.usdt {
+  position: absolute;
+  right: -100%;
+  top: 0%;
+}
+.usdtDos {
+  position: absolute;
+  right: -100%;
+  top: 40%;
+}
+.messagePay {
+  color: #FFF;
+  font-family: "Poppins", sans-serif;
+  font-size: 1em;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin: 0px;
+}
 
 .inputs {
   width: 100%;
