--- a/src/components/Inputs/styles.css
+++ b/src/components/Inputs/styles.css
@@ -35,6 +35,11 @@
   right: 130%;
   top: 0%;
 }
+.brl {
+  position: absolute;
+  right: -100%;
+  top: 60%;
+}
 .motive {
   position: absolute;
   right: 130%;
