--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -58,7 +58,7 @@
 .containerLogoFooter {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     width: auto;
 }
 .textNavOne {
@@ -119,7 +119,7 @@
     margin-top: 10px;
 }
 .footerOrder {
-    width: 90%;
+    width: auto;
     border-radius: 30px;
     background:  rgba(255, 255, 255, 0.10);
     background-blend-mode: soft-light, normal;
@@ -132,7 +132,7 @@
     align-items: center;
     flex-direction: row;
     display: flex;
-    padding: 0px 30px;
+    padding: 60px;
     justify-content: space-between;
     gap: 5em;
 }
@@ -155,24 +155,22 @@
     line-height: normal;
 }
 
-.logoFooter {
-    padding: 0px 30px;
-}
+
 
 
 
 @media (min-width: 360px) and (max-width: 576px) {
     .footerOrder {
-        width: 70%;
+        width: 80%;
         top: 0px;
         height: auto;
         display: flex;
         flex-direction: column;
         gap: 2em;
-        padding: 30px 30px;
+        padding: 30px 20px;
     }
     .columnOneFooter {
-        width: auto;
+        width: 100%;
     }
     .footer {
         height: auto;
@@ -184,7 +182,7 @@
     }
     .logoFooter {
         padding: 0px;
-        width: 80%;
+        width: 150px;
     }
     .footerProduct {
         margin-bottom: 0px;
@@ -203,10 +201,12 @@
         flex-direction: row;
         align-items: flex-start;
         justify-content: center;
-        gap: 2em;
+        gap: 1em;
+        width: 100%;
     }
     .textNavOne, .textNavThree, .textNavComunidad {
-        font-size: .8em;
+        font-size: .75em;
+        font-family: "Poppins-Regular", sans-serif;
     }
     .columnOneFooterRed {
         justify-content: center;
@@ -217,7 +217,7 @@
         margin: 30px 0px;
     }
 }
-@media (min-width: 577px) and (max-width: 768px) {
+@media (min-width: 577px) and (max-width: 992px) {
     .footerOrder {
         width: 80%;
         top: 0px;
@@ -240,7 +240,7 @@
     }
     .logoFooter {
         padding: 0px;
-        width: 90%;
+        width: 200px;
     }
     .footerProduct {
         margin-bottom: 0px;
@@ -273,29 +273,85 @@
     }
 }
 
-@media (min-width: 769px)  {
+@media (min-width: 1201px) and (max-width: 1440px) {
+    .logoFooter {
+        width: 300px;
+    }
+}
+@media (min-width: 993px) and (max-width: 1200px) {
+    .logoFooter {
+        width: 200px;
+    }
+}
+
+@media (min-width: 993px) and (max-width: 1440px) {
     .listResponsive {
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
+        align-items: start;
+        justify-content: center;
+        gap: 2em;
     }
-    .containerTotal {
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-evenly;
-        width: 100%;
+    .footerOrder {
+        padding: 40px 60px;
+        width: 80%;
+        top: 250px;
     }
     .lineResponsive {
         display: none;
     }
     .columnOneFooter {
-        width: auto;
+        width: 50%;
     }
-   .columnOneFooter {
-        width: auto;
+    .columnOneFooterRed {
+        justify-content: center;
     }
-    .textNavTwo {
-        width: 60%;
-    } 
+    .footerOrder {
+        gap: 3em;
+    }
+    .textNavThree {
+        font-weight: 500;
+    }
+    .containerTotal {
+        align-items: flex-start;
+    }
+    .textNavComunidad {
+        text-align: center;
+    }
 }
-
+/* @media (min-width: 1201px) and (max-width: 1440px) {
+    .listResponsive {
+        display: flex;
+        flex-direction: row;
+        align-items: start;
+        justify-content: center;
+        gap: 5em;
+    }
+    .footerOrder {
+        width: 80%;
+        border-radius: 30px;
+        background:  rgba(255, 255, 255, 0.10);
+        background-blend-mode: soft-light, normal;
+        box-shadow: 0px -4px 2px 0px rgba(0, 0, 0, 0.05) inset;
+        backdrop-filter: blur(20px);
+        height: 250px;
+        z-index: 1;
+        top: 200px;
+        position: relative;
+        align-items: center;
+        flex-direction: row;
+        display: flex;
+        padding: 60px;
+        justify-content: space-between;
+        gap: 5em;
+    }
+    .containerTotal {
+        align-items: flex-start;
+    }
+    .footerOrder {
+        gap: 5em;
+    }
+    .logoFooter {
+        width: 250px;
+    }
+} */
